--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startup 3 - Figma Practice</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -17,18 +19,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header id="home" class="site-header">
       <div class="container">
-        <nav class="navbar">
+        <button class="hamburger-menu" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <nav id="mobile-nav" class="main-nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Our Team</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#team">Our Team</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
         <div class="container">
@@ -46,7 +52,7 @@
       </div>
     </header>
 
-    <section class="sample">
+    <section class="sample-section">
       <div class="sample-content container">
         <h4 class="text-lg text-center">Free Sample</h4>
         <h2 class="text-xxl text-center">Powerful Generator and Free</h2>
@@ -59,9 +65,9 @@
       </div>
     </section>
 
-    <section class="feature">
-      <div class="laptop">
-        <img class="macbook" src="/images/Change MacBook Color (Optional).png" alt="laptop" />
+    <section id="features" class="feature-section">
+      <div class="laptop-mockup">
+        <img class="macbook-base" src="/images/Change MacBook Color (Optional).png" alt="laptop" />
         <img class="macbook-screen" src="/images/Screen Effects.png" alt="laptop-screen" />
       </div>
       <div>
@@ -72,15 +78,15 @@
             websites for their startups quickly and easily.
           </p>
         </div>
-        <div class="feature-body">
-          <div class="feature-body-1">
+        <div class="feature-body-content">
+          <div class="feature-item">
             <i class="fa-regular fa-file"></i>
             <h5 class="text-md">30 NEW FEATURE PAGES</h5>
             <p class="text-sm">
               Startup Framework contains components and complex blocks which can easily.
             </p>
           </div>
-          <div class="feature-body-2">
+          <div class="feature-item">
             <i class="fa-regular fa-gem"></i>
             <h5 class="text-md">Useful Symbol Components</h5>
             <p class="text-sm">
@@ -91,7 +97,7 @@
       </div>
     </section>
 
-    <section class="form">
+    <section class="form-section">
       <div class="form-content lg-container">
         <div class="form-text">
           <h2 class="text-xl">We solve digital problems with an outstanding creative flare</h2>
@@ -100,43 +106,39 @@
             websites for their startups quickly and easily.
           </p>
         </div>
-        <div class="form-container">
-          <div class="navbar-form">
-            <a href="#" class="nav-link active" data-form="signup">Sign Up</a>
-            <a href="#" class="nav-link" data-form="login">Login</a>
+        <div class="auth-form-container">
+          <div class="form-tabs">
+            <a href="#" class="form-tab-link active" data-form="signup">Sign Up</a>
+            <a href="#" class="form-tab-link" data-form="login">Login</a>
           </div>
-          <div id="signup-form" class="form-content">
+
+          <div id="signup-form-wrapper" class="form-wrapper">
             <form id="signup-form">
               <input type="email" id="signup-email" name="email" placeholder="Your email" />
-
               <input
                 type="password"
                 id="signup-password"
                 name="password"
                 placeholder="Your password"
               />
-
               <input
                 type="password"
                 id="confirm-password"
                 name="confirm-password"
                 placeholder="Confirm password"
               />
-
               <button type="submit" class="btn-block btn-quarternary">Create an Account</button>
-              <div class="separator">
+              <div class="form-separator">
                 <span>OR</span>
               </div>
-
-              <a href="#" class="btn-tertiary btn-block">Login via Google</a>
+              <a href="https://google.com" class="btn-tertiary btn-block">Login via Google</a>
             </form>
           </div>
-          <div id="login-form" class="form-content hidden">
+
+          <div id="login-form-wrapper" class="form-wrapper hidden">
             <form id="login-form">
               <input type="email" id="email" name="email" placeholder="Your email" />
-
               <input type="password" id="password" name="password" placeholder="Your password" />
-
               <button type="submit" class="btn-block btn-tertiary">Login</button>
               <a href="#">Forgot password?</a>
             </form>
@@ -145,98 +147,226 @@
       </div>
     </section>
 
-    <section class="testimonial">
+    <section class="testimonial-section">
       <div class="testimonial-content container">
-        <div class="testimonial-header">
+        <div class="section-header">
           <h1 class="text-xxl">Our Happy Clients</h1>
         </div>
         <div class="testimonial-grid">
           <div class="card">
-            <div class="testimonial-body">
+            <div class="testimonial-card-body">
               <img src="images/Userpic.png" alt="user_pic_1" />
               <p>
                 Get a fully retina ready site when you build with Startup Framework. Websites look
                 sharper and more gorgeous on devices with retina display support
               </p>
             </div>
-            <p class="user-name">- Rayhan Curran</p>
+            <p class="user-name">Rayhan Curran</p>
           </div>
           <div class="card">
-            <div class="testimonial-body">
+            <div class="testimonial-card-body">
               <img src="images/Userpic(1).png" alt="user_pic_2" />
               <p>
                 As a business targeting high net worth individuals, we were looking for a slick,
                 cool and mini-malistic design for our website
               </p>
             </div>
-            <p class="user-name">- Kayley Frame</p>
+            <p class="user-name">Kayley Frame</p>
           </div>
           <div class="card">
-            <div class="testimonial-body">
+            <div class="testimonial-card-body">
               <img src="images/Userpic(2).png" alt="user_pic_2" />
               <p>The most important part of the Startup Framework is the samples</p>
             </div>
-            <p class="user-name">- Gene Whitfield</p>
+            <p class="user-name">Gene Whitfield</p>
           </div>
           <div class="card">
-            <div class="testimonial-body">
+            <div class="testimonial-card-body">
               <img src="images/Userpic(3).png" alt="user_pic_3" />
               <p>I’ve built my website with Startup just in one day, and it was ready-to-go.</p>
             </div>
-            <p class="user-name">- Allan Kim</p>
+            <p class="user-name">Allan Kim</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="cta">
-        <div class="container">
-          <div class="cta-content">
-            <h1 class="text-xxl text-center">Easy to setup.</h1>
-            <h1 class="text-xxl text-center">Easy to maintain.</h1>
-            <p class="text-md text-center">
-              Startup Framework gives you complete freedom over your creative process - you don't
-              have to think about any technical aspects. There are no limits and absolutely no
-              coding.
-            </p>
-            <div class="cta-buttons">
-                <img src="images/Icon - Fill.png" alt="play_icon">
-                <a href="#" class="btn btn-quarternary">Get Started</a>
-            </div>
+    <section class="call-to-action">
+      <div class="container">
+        <div class="cta-content">
+          <h1 class="text-xxl text-center">Easy to setup.</h1>
+          <h1 class="text-xxl text-center">Easy to maintain.</h1>
+          <p class="text-md text-center">
+            Startup Framework gives you complete freedom over your creative process - you don't have
+            to think about any technical aspects. There are no limits and absolutely no coding.
+          </p>
+          <div class="cta-buttons">
+            <img src="images/Icon - Fill.png" alt="play_icon" />
+            <a href="#" class="btn btn-quarternary">Get Started</a>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="showCase">
-        <div class="lg-container">
-            <div class="showCase-header">
-                <h1 class="text-xl">Last Works</h1>
-                <a href="" class="btn btn-secondary">View All Works</a>
-            </div>
-            <div class="showCase-grid">
-                <div class="work-project">
-                    <img src="images/Photo.png" alt="pic1">
-                    <h6>UI KIT</h6>
-                    <p class="text-sm">Mozart Project</p>
-                </div>
-                <div class="work-project">
-                    <img src="images/Photo2.png" alt="pic2">
-                    <h6>FRAMEWORK</h6>
-                    <p class="text-sm">Startup Framework 2.0</p>
-                </div>
-                <div class="work-project">
-                    <img src="images/Photo3.png" alt="pic3">
-                    <h6 >PHOTOS</h6>
-                    <p class="text-sm">From the Sky</p>
-                </div>
-                <div class="work-project">
-                    <img src="images/Photo4.png" alt="pic4">
-                    <h6>PICTURES</h6>
-                    <p class="text-sm">Airforces</p>
-                </div>
-            </div>
+    <section id="works" class="showcase-section">
+      <div class="lg-container">
+        <div class="showcase-header">
+          <h1 class="text-xl">Last Works</h1>
+          <a href="#works" class="btn btn-secondary">View All Works</a>
         </div>
+        <div class="showcase-grid">
+          <div class="project-card">
+            <img src="images/Photo.png" alt="pic1" />
+            <h6>UI KIT</h6>
+            <p class="text-sm">Mozart Project</p>
+          </div>
+          <div class="project-card">
+            <img src="images/Photo2.png" alt="pic2" />
+            <h6>FRAMEWORK</h6>
+            <p class="text-sm">Startup Framework 2.0</p>
+          </div>
+          <div class="project-card">
+            <img src="images/Photo3.png" alt="pic3" />
+            <h6>PHOTOS</h6>
+            <p class="text-sm">From the Sky</p>
+          </div>
+          <div class="project-card">
+            <img src="images/Photo4.png" alt="pic4" />
+            <h6>PICTURES</h6>
+            <p class="text-sm">Airforces</p>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <section id="team" class="team-section">
+      <div class="container">
+        <div class="section-header">
+          <h1 class="text-xxl">Startup Crew</h1>
+          <p class="text-lg">
+            The most important part of the Startup Framework is the samples. The samples form a set
+            of 25 usable pages you can use as is or you can add new blocks from UI Kit.
+          </p>
+        </div>
+        <div class="team-profiles">
+          <div class="profile-card">
+            <img src="images/Userpic.png" alt="" class="profile-img" />
+            <h4 class="text-sm">Leah Salomon</h4>
+            <h5>UI Designer</h5>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+          <div class="profile-card">
+            <img src="images/Userpic.png" alt="" class="profile-img" />
+            <h4 class="text-sm">Colin Timmons</h4>
+            <h5>UX Designer</h5>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+          </div>
+          <div class="profile-card">
+            <img src="images/Userpic.png" alt="" class="profile-img" />
+            <h4 class="text-sm">Miguel Osborne</h4>
+            <h5>Front-end Designer</h5>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+          <div class="profile-card">
+            <img src="images/Userpic.png" alt="" class="profile-img" />
+            <h4 class="text-sm">Taylor Simon</h4>
+            <h5>Product Manager</h5>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+          <div class="profile-card">
+            <img src="images/Userpic.png" alt="" class="profile-img" />
+            <h4 class="text-sm">Steven MacAlister</h4>
+            <h5>UI Designer</h5>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="pricing" class="pricing-section">
+      <div class="lg-container">
+        <div class="pricing-header">
+          <h1 class="text-xxl text-center">Plans & Pricing</h1>
+          <p class="text-lg text-center">
+            Startup Framework is free forever — you only pay for custom domain hosting or to export
+            your site.
+          </p>
+        </div>
+        <div class="pricing-grid">
+          <div class="price-card">
+            <h2 class="text-lg">Starter</h2>
+            <h1 class="text-xxl">$9.99</h1>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <a href="" class="btn-transparent btn-block">Get Started</a>
+          </div>
+          <div class="price-card">
+            <h2 class="text-lg">Professional</h2>
+            <h1 class="text-xxl">$19.99</h1>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <a href="" class="btn btn-block btn-accent">Get Started</a>
+          </div>
+          <div class="price-card">
+            <h2 class="text-lg">Team</h2>
+            <h1 class="text-xxl">$49.99</h1>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <a href="" class="btn-transparent btn-block">Get Started</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="site-footer">
+      <div class="xl-container">
+        <div class="footer-top">
+          <div class="footer-logo">Startup 3</div>
+          <div class="policy-socials">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms</a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://google.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-google-plus-g"></i></a>
+          </div>
+        </div>
+        <hr />
+        <div class="footer-bottom">
+          <div class="footer-links">
+            <ul>
+              <li><a href="#home">Tour</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#pricing">Pricing Plans</a></li>
+              <li><a href="#works">Our Works</a></li>
+              <li><a href="#">Brands</a></li>
+              <li><a href="#team">Contacts</a></li>
+            </ul>
+          </div>
+          <p>© 2017 Woodland. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
