Fixed Hamburger Menu

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
   <body>
     <header id="home" class="site-header">
       <div class="container">
-        <button class="hamburger-menu" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
-        <nav id="mobile-nav" class="main-nav">
+        <div class="hamburger-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <nav class="main-nav" id="main-nav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#features">Features</a></li>
@@ -253,38 +255,62 @@
             <img src="images/Userpic.png" alt="" class="profile-img" />
             <h4 class="text-sm">Leah Salomon</h4>
             <h5>UI Designer</h5>
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
-            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-solid fa-globe"></i
+            ></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </div>
           <div class="profile-card">
             <img src="images/Userpic.png" alt="" class="profile-img" />
             <h4 class="text-sm">Colin Timmons</h4>
             <h5>UX Designer</h5>
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-solid fa-globe"></i
+            ></a>
           </div>
           <div class="profile-card">
             <img src="images/Userpic.png" alt="" class="profile-img" />
             <h4 class="text-sm">Miguel Osborne</h4>
             <h5>Front-end Designer</h5>
-            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></a>
-            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-solid fa-globe"></i
+            ></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </div>
           <div class="profile-card">
             <img src="images/Userpic.png" alt="" class="profile-img" />
             <h4 class="text-sm">Taylor Simon</h4>
             <h5>Product Manager</h5>
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </div>
           <div class="profile-card">
             <img src="images/Userpic.png" alt="" class="profile-img" />
             <h4 class="text-sm">Steven MacAlister</h4>
             <h5>UI Designer</h5>
-            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -304,34 +330,34 @@
             <h2 class="text-lg">Starter</h2>
             <h1 class="text-xxl">$9.99</h1>
             <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>14 days of backups</p>
+            <p><i class="fa-solid fa-check"></i>Social integrations</p>
+            <p><i class="fa-solid fa-check"></i>Client Billing</p>
             <a href="" class="btn-transparent btn-block">Get Started</a>
           </div>
           <div class="price-card">
             <h2 class="text-lg">Professional</h2>
             <h1 class="text-xxl">$19.99</h1>
             <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>14 days of backups</p>
+            <p><i class="fa-solid fa-check"></i>Soial integrations</p>
+            <p><i class="fa-solid fa-check"></i>Client Billing</p>
+            <p><i class="fa-solid fa-check"></i>Remote Access</p>
+            <p><i class="fa-solid fa-check"></i>24 hours support</p>
             <a href="" class="btn btn-block btn-accent">Get Started</a>
           </div>
           <div class="price-card">
             <h2 class="text-lg">Team</h2>
             <h1 class="text-xxl">$49.99</h1>
             <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
-            <p><i class="fa-solid fa-check"></i>2 GB of space</p>
+            <p><i class="fa-solid fa-check"></i>14 days of backups</p>
+            <p><i class="fa-solid fa-check"></i>Soial integrations</p>
+            <p><i class="fa-solid fa-check"></i>Client Billing</p>
+            <p><i class="fa-solid fa-check"></i>Remote Access</p>
+            <p><i class="fa-solid fa-check"></i>24 hours support</p>
+            <p><i class="fa-solid fa-check"></i>Admin tools</p>
+            <p><i class="fa-solid fa-check"></i>Collaboration tools</p>
+            <p><i class="fa-solid fa-check"></i>User management</p>
             <a href="" class="btn-transparent btn-block">Get Started</a>
           </div>
         </div>
@@ -345,9 +371,15 @@
           <div class="policy-socials">
             <a href="#">Privacy Policy</a>
             <a href="#">Terms</a>
-            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://google.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-google-plus-g"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="https://google.com" target="_blank" rel="noopener noreferrer"
+              ><i class="fab fa-google-plus-g"></i
+            ></a>
           </div>
         </div>
         <hr />
@@ -362,7 +394,7 @@
               <li><a href="#team">Contacts</a></li>
             </ul>
           </div>
-          <p>© 2017 Woodland. All rights reserved.</p>
+          <p>© <span class="date"></span> Woodland. All rights reserved.</p>
         </div>
       </div>
     </footer>
